== Version 2.8 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # Apps :
        * Creme_config :
            - The Roles get a new permission: listable models
              (i.e. it allows you to access the list-views of a model).
              The existing roles are migrated to keep the old behaviour: they get
              list permissions for all models belonging to allowed apps.

  Developers side :
  -----------------
    - The version of 'QUnit' is now '2.24.1'.
      If you have implemented some javascript unit tests, you should probably read the upgrade guide to QUnit 2.x :
       - https://qunitjs.com/upgrade-guide-2.x/

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The context processor "creme_core.context_processors.get_entities_deletion_allowed"
              is now deprecated (it injected "ENTITIES_DELETION_ALLOWED" in contexts) ;
              it has been removed from the default settings.
            - In 'creme_core.models' :
                - The method 'header_filter.HeaderFilterManager.create_if_needed()
                 is deprecated; use the method 'proxy()' instead.
                - The method 'search.SearchConfigItemManager.create_if_needed()'
                  is deprecated; use the method 'builder()' instead.
        # The declarative possibilities of 'creme_core.management.commands.creme_populate.BasePopulator'
          have been extended; new class attributes are :
             - BUTTONS
             - HEADER_FILTERS
             - RELATION_TYPES
             - SEARCH
          Note: you should probably use 'RelationType.objects.builder()' instead of
                'RelationType.objects.smart_update_or_create()' when it's possible,
                because the last method will be removed in a futur version.
        # The models which can be used by EntityFilters (i.e. CremeEntity gets a